# img-proc-and-comp-vision

./: .gitignore  LICENSE  README.md  SLIDES.md  pyproject.toml
notebooks/: 01_images_as_tensors.ipynb  02_convolutions.ipynb  03_datasets_and_augmentations.ipynb  04_first_cnn.ipynb  05_training_cnn.ipynb  06_transfer_learning.ipynb  07_gradcam.ipynb  08_Introduction_to_ViT.ipynb  08_attention_intro.ipynb  08_intro_to_vit.ipynb  09_building_vit.ipynb  09_finetuning_vit_with_huggingface.ipynb  10_cnn_vs_vit.ipynb
slides/: day1.md  day3.md  debugging.html  debugging.md  debugging.pptx  intro.html  intro.md  intro.pptx
src/cvcourse/: __init__.py  torch_utils.py  viz.py
teacher/: README.md  SLIDES.md  TEACHING_NOTES.md
teacher/scripts/: build_notebooks.py
teacher/slides/: day1.md  day2.md  day3.md
